--- a/css/styles.css
+++ b/css/styles.css
@@ -65,3 +65,41 @@ body {
   padding: 19px;
 }
 
+/* SECCION PRINCIPAL*/
+#principal {
+  height: 400px;
+  margin-top: 10px;
+  background: url('../img/principal.jpg');
+  color: white;
+  display: flex;
+  align-items: flex-end;
+}
+
+#principal span {
+  padding: 30px;
+  margin-bottom: 30px;
+  font-size: 12px;
+}
+
+#principal span div {
+  margin-left: 50%;
+  margin-top: 10px;
+}
+
+#principal span div a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  padding: 8px;
+  border: 1px solid #cccc;
+  border-radius: 5px;
+  transition: all 600ms;
+}
+
+#principal span div a:hover {
+  background: #283747;
+    box-shadow: -1px -1px 5px -1px #cccc;
+}
+
+
+
