--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ body {
 #principal {
   height: 400px;
   margin-top: 10px;
-  background: url('../img/principal.jpg');
+  background: url('../img/principal.jpg') no-repeat center center/cover;
   color: white;
   display: flex;
   align-items: flex-end;
@@ -98,7 +98,7 @@ body {
 
 #principal span div a:hover {
   background: #283747;
-    box-shadow: -1px -1px 5px -1px #cccc;
+  box-shadow: -1px -1px 5px -1px #cccc;
 }
 
 
