--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,6 @@ body {
 
 .section > h3 , p {
   color: white;
-  text-align: justify;
 }
 
 .section > h3 {
@@ -170,4 +169,9 @@ body {
   margin-bottom: 35px;
   margin-left: 25px;
   margin-right: 25px;
+   text-align: justify;
+}
+
+.secundario {
+ background: url('../img/secundario.jpg') !important;
 }
